--- a/Client/src/app/@theme/styles/themes.scss
+++ b/Client/src/app/@theme/styles/themes.scss
@@ -11,6 +11,7 @@ $nb-themes: nb-register-theme((
   sidebar-header-gap: 2rem,
   sidebar-header-height: initial,
   layout-content-width: 1400px,
+  header-bg: blue,
 
   font-main: Roboto,
   font-secondary: Exo,
