Client - Design changes

--- a/Client/src/app/auth/login/login-page.component.html
+++ b/Client/src/app/auth/login/login-page.component.html
@@ -1,5 +1,11 @@
 <main class="main">
   <div class="container">
+    <span
+      style="width:250px;position:absolute;padding-top: 30px;
+    font-family: Consolas,monaco,monospace;font-size:25pt;"
+    >
+      Policies App
+    </span>
     <img src="" style="position:absolute;padding-top: 30px;" />
     <div class="d-flex justify-content-center h-100">
       <div class="card">
