--- a/Client/src/app/auth/logout/logout-page.component.html
+++ b/Client/src/app/auth/logout/logout-page.component.html
@@ -1,6 +1,11 @@
 <main class="main">
   <div class="container">
-    <img src="" style="width:200px;position:absolute;padding-top: 30px;" />
+    <span
+      style="width:250px;position:absolute;padding-top: 30px;
+    font-family: Consolas,monaco,monospace;font-size:25pt;"
+    >
+      Policies App
+    </span>
     <div class="d-flex justify-content-center h-100">
       <div class="card">
         <div class="card-header">
