--- a/Client/src/app/auth/register/register-page.component.scss
+++ b/Client/src/app/auth/register/register-page.component.scss
@@ -1,5 +1,5 @@
 .main {
-  //background-image: url('./../../../assets/images/login.jpg');
+  background-image: url('./../../../assets/images/login.png');
   background-size: cover;
   background-repeat: no-repeat;
   height: 100%;
