--- a/Client/src/app/admin/Policy/policy.component.html
+++ b/Client/src/app/admin/Policy/policy.component.html
@@ -80,6 +80,7 @@
         <div class="col-sm-6">
           <div class="form-group">
             <label for="inputCoverage">Policy Coverage</label>
+
             <select
               class="form-control"
               id="inputCoverage"
@@ -89,7 +90,7 @@
             >
               <option disabled hidden [value]="">-- select --</option>
               <option *ngFor="let coverage of coverages" [value]="coverage.id"
-                >{{ coverage.name }} / {{ coverage.cover }}</option
+                >{{ coverage.name }} / {{ coverage.cover }}%</option
               >
             </select>
           </div>
@@ -115,6 +116,9 @@
           </div>
         </div>
       </div>
+      <nb-alert *ngIf="alertRisk" status="danger"
+        >High Policy Risk! Please, select a policy coverage under 50%</nb-alert
+      >
       <button type="submit" class="btn btn-primary">Create</button>
     </form>
   </nb-card-body>
