CLIENT-API delete users, policies and check validations

--- a/Client/src/app/admin/Policies/policies.component.html
+++ b/Client/src/app/admin/Policies/policies.component.html
@@ -8,6 +8,8 @@
           [source]="source"
           (editConfirm)="onCreateUpdateConfirm($event)"
           (createConfirm)="onCreateUpdateConfirm($event)"
+          (deleteConfirm)="onDeleteConfirm($event)"
+          (custom)="onCustom($event)"
         >
         </ng2-smart-table>
       </nb-card-body>
