--- a/Client/src/app/admin/Policy/policy.component.html
+++ b/Client/src/app/admin/Policy/policy.component.html
@@ -119,7 +119,7 @@
       <nb-alert *ngIf="alertRisk" status="danger"
         >High Policy Risk! Please, select a policy coverage under 50%</nb-alert
       >
-      <button type="submit" class="btn btn-primary">Create</button>
+      <button type="submit" class="btn btn-primary">Submit</button>
     </form>
   </nb-card-body>
 </nb-card>
