--- a/Client/src/app/admin/clients/clients.component.html
+++ b/Client/src/app/admin/clients/clients.component.html
@@ -8,6 +8,7 @@
             [settings]="settings"
             [source]="source"
             (custom)="onCustom($event)"
+            (deleteConfirm)="onDeleteConfirm($event)"
           >
           </ng2-smart-table>
         </nb-card-body>
