--- a/Client/src/app/auth/login/login-page.component.html
+++ b/Client/src/app/auth/login/login-page.component.html
@@ -52,11 +52,6 @@
               >Create an account</a
             >
           </div>
-          <div class="d-flex justify-content-center">
-            <a href="/auth/forgot" routerlink="/auth/forgot"
-              >Forgot your password?</a
-            >
-          </div>
         </div>
       </div>
     </div>
@@ -64,7 +59,7 @@
 </main>
 <footer
   class="footer mt-auto py-3"
-  style="background-color: black; height: 113px;"
+  style="background-color: rgb(65, 48, 48); height: 113px;"
 >
   <div class="container">
     <div class="row">
