--- a/Client/src/app/auth/register/register-page.component.html
+++ b/Client/src/app/auth/register/register-page.component.html
@@ -1,11 +1,12 @@
 <main class="main">
   <div class="container">
     <span
-      style="width:250px;position:absolute;padding-top: 30px;
+      style="width:280px;position:absolute;padding-top: 30px;
     font-family: Consolas,monaco,monospace;font-size:25pt;"
     >
       Policies App
     </span>
+    <img src="" style="position:absolute;padding-top: 30px;" />
     <div class="d-flex justify-content-center h-100">
       <div class="card" *ngIf="registerStatus">
         <div class="card-header">
